deployments/k8s/nzsa/r-models-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: r-pipelines-models
  labels:
    app: r-pipelines
spec:
  selector:
    app: r-pipelines
  ports:
    - name: port-3838
      protocol: TCP
      port: 3838
      targetPort: 3838
    - name: port-8089
      protocol: TCP
      port: 8089
      targetPort: 8089
